Setting lateral menu and some layout bugfixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 @import "bootstrap/scss/bootstrap";
+@import "devise";
 
 @import "home";
 @import "knowing_how";
-@import "devise";
+
+@import "shared/lateral_menu";
 
 html,
 body {
@@ -24,7 +26,6 @@ body {
 }
 
 .div_center {
-  width: 100vw;
   height: calc(100vh - 100px);
   display: flex;
   flex-direction: row;
@@ -36,15 +37,6 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
-}
-
-.fullscreen-bg {
-  height: 100vh;
-}
-
-iframe {
-  width: 100%;
-  height: 100vh;
 }
 
 @media screen and (max-width: 800px) {
